@@ -344,6 +344,66 @@ name|IvyBuildList
 extends|extends
 name|IvyTask
 block|{
+specifier|public
+specifier|static
+specifier|final
+class|class
+name|OnMissingDescriptor
+block|{
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|HEAD
+init|=
+literal|"head"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|TAIL
+init|=
+literal|"tail"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|SKIP
+init|=
+literal|"skip"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|FAIL
+init|=
+literal|"fail"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|WARN
+init|=
+literal|"warn"
+decl_stmt|;
+specifier|private
+name|OnMissingDescriptor
+parameter_list|()
+block|{
+block|}
+block|}
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DESCRIPTOR_REQUIRED
+init|=
+literal|"required"
+decl_stmt|;
 specifier|private
 name|List
 name|buildFileSets
@@ -364,10 +424,12 @@ init|=
 literal|true
 decl_stmt|;
 specifier|private
-name|boolean
-name|skipBuildWithoutIvy
+name|String
+name|onMissingDescriptor
 init|=
-literal|false
+name|OnMissingDescriptor
+operator|.
+name|HEAD
 decl_stmt|;
 specifier|private
 name|boolean
@@ -691,6 +753,13 @@ operator|new
 name|ArrayList
 argument_list|()
 decl_stmt|;
+name|List
+name|noDescriptor
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
 name|Collection
 name|mds
 init|=
@@ -936,61 +1005,15 @@ name|exists
 argument_list|()
 condition|)
 block|{
-if|if
-condition|(
-name|skipBuildWithoutIvy
-condition|)
-block|{
-name|Message
-operator|.
-name|debug
+name|onMissingDescriptor
 argument_list|(
-literal|"skipping "
-operator|+
 name|buildFile
-operator|+
-literal|": ivy file "
-operator|+
+argument_list|,
 name|ivyFile
-operator|+
-literal|" doesn't exist"
+argument_list|,
+name|noDescriptor
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|Message
-operator|.
-name|verbose
-argument_list|(
-literal|"no ivy file for "
-operator|+
-name|buildFile
-operator|+
-literal|": ivyfile="
-operator|+
-name|ivyFile
-operator|+
-literal|": adding it at the beginning of the path"
-argument_list|)
-expr_stmt|;
-name|Message
-operator|.
-name|verbose
-argument_list|(
-literal|"\t(set skipbuildwithoutivy to true if you don't want this"
-operator|+
-literal|" file to be added to the path)"
-argument_list|)
-expr_stmt|;
-name|independent
-operator|.
-name|add
-argument_list|(
-name|buildFile
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 else|else
 block|{
@@ -1234,6 +1257,52 @@ argument_list|,
 name|nonMatchingVersionReporter
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|onMissingDescriptor
+operator|!=
+name|OnMissingDescriptor
+operator|.
+name|TAIL
+condition|)
+block|{
+for|for
+control|(
+name|ListIterator
+name|iter
+init|=
+name|noDescriptor
+operator|.
+name|listIterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|File
+name|buildFile
+init|=
+operator|(
+name|File
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|addBuildFile
+argument_list|(
+name|path
+argument_list|,
+name|buildFile
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 for|for
 control|(
 name|ListIterator
@@ -1468,6 +1537,52 @@ name|buildFile
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|onMissingDescriptor
+operator|==
+name|OnMissingDescriptor
+operator|.
+name|TAIL
+condition|)
+block|{
+for|for
+control|(
+name|ListIterator
+name|iter
+init|=
+name|noDescriptor
+operator|.
+name|listIterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|File
+name|buildFile
+init|=
+operator|(
+name|File
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|addBuildFile
+argument_list|(
+name|path
+argument_list|,
+name|buildFile
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|getProject
 argument_list|()
 operator|.
@@ -1492,6 +1607,140 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+specifier|private
+name|void
+name|onMissingDescriptor
+parameter_list|(
+name|File
+name|buildFile
+parameter_list|,
+name|File
+name|ivyFile
+parameter_list|,
+name|List
+name|noDescriptor
+parameter_list|)
+block|{
+if|if
+condition|(
+name|onMissingDescriptor
+operator|==
+name|OnMissingDescriptor
+operator|.
+name|SKIP
+condition|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"skipping "
+operator|+
+name|buildFile
+operator|+
+literal|": descriptor "
+operator|+
+name|ivyFile
+operator|+
+literal|" doesn't exist"
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|onMissingDescriptor
+operator|==
+name|OnMissingDescriptor
+operator|.
+name|FAIL
+condition|)
+block|{
+throw|throw
+operator|new
+name|BuildException
+argument_list|(
+literal|"a module has no module descriptor and onMissingDescriptor=fail. "
+operator|+
+literal|"Build file: "
+operator|+
+name|buildFile
+operator|+
+literal|". Expected descriptor: "
+operator|+
+name|ivyFile
+argument_list|)
+throw|;
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|onMissingDescriptor
+operator|==
+name|OnMissingDescriptor
+operator|.
+name|WARN
+condition|)
+block|{
+name|Message
+operator|.
+name|warn
+argument_list|(
+literal|"a module has no module descriptor. "
+operator|+
+literal|"Build file: "
+operator|+
+name|buildFile
+operator|+
+literal|". Expected descriptor: "
+operator|+
+name|ivyFile
+argument_list|)
+expr_stmt|;
+block|}
+name|Message
+operator|.
+name|verbose
+argument_list|(
+literal|"no descriptor for "
+operator|+
+name|buildFile
+operator|+
+literal|": descriptor="
+operator|+
+name|ivyFile
+operator|+
+literal|": adding it at the "
+operator|+
+name|onMissingDescriptor
+operator|==
+name|OnMissingDescriptor
+operator|.
+name|TAIL
+condition|?
+literal|"tail"
+else|:
+literal|"head"
+operator|+
+literal|" of the path"
+argument_list|)
+expr_stmt|;
+name|Message
+operator|.
+name|verbose
+argument_list|(
+literal|"\t(change onMissingDescriptor if you want to take another action"
+argument_list|)
+expr_stmt|;
+name|noDescriptor
+operator|.
+name|add
+argument_list|(
+name|buildFile
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|private
 name|List
@@ -2441,14 +2690,44 @@ name|ivyFilePath
 expr_stmt|;
 block|}
 specifier|public
+name|String
+name|getOnMissingDescriptor
+parameter_list|()
+block|{
+return|return
+name|onMissingDescriptor
+return|;
+block|}
+specifier|public
+name|void
+name|setOnMissingDescriptor
+parameter_list|(
+name|String
+name|onMissingDescriptor
+parameter_list|)
+block|{
+name|this
+operator|.
+name|onMissingDescriptor
+operator|=
+name|onMissingDescriptor
+expr_stmt|;
+block|}
+comment|/**      * @deprecated use {@link #getOnMissingDescriptor()} instead.       */
+specifier|public
 name|boolean
 name|isSkipbuildwithoutivy
 parameter_list|()
 block|{
 return|return
-name|skipBuildWithoutIvy
+name|onMissingDescriptor
+operator|==
+name|OnMissingDescriptor
+operator|.
+name|SKIP
 return|;
 block|}
+comment|/**      * @deprecated use {@link #setOnMissingDescriptor(String)} instead.       */
 specifier|public
 name|void
 name|setSkipbuildwithoutivy
@@ -2457,11 +2736,26 @@ name|boolean
 name|skipBuildFilesWithoutIvy
 parameter_list|)
 block|{
+name|Message
+operator|.
+name|deprecated
+argument_list|(
+literal|"skipbuildwithoutivy is deprecated, use onMissingDescriptor instead."
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
-name|skipBuildWithoutIvy
+name|onMissingDescriptor
 operator|=
 name|skipBuildFilesWithoutIvy
+condition|?
+name|OnMissingDescriptor
+operator|.
+name|SKIP
+else|:
+name|OnMissingDescriptor
+operator|.
+name|FAIL
 expr_stmt|;
 block|}
 specifier|public
