@@ -93,6 +93,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collection
 import|;
 end_import
@@ -767,6 +777,22 @@ name|BasicResolver
 extends|extends
 name|AbstractResolver
 block|{
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DESCRIPTOR_OPTIONAL
+init|=
+literal|"optional"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DESCRIPTOR_REQUIRED
+init|=
+literal|"required"
+decl_stmt|;
 comment|/**      * Exception thrown internally in getDependency to indicate a dependency is unresolved.      *<p>      * Due to the contract of getDependency, this exception is never thrown publicly, but rather      * converted in a message (either error or verbose) and returning null      *</p>      */
 specifier|private
 specifier|static
@@ -5107,10 +5133,95 @@ name|boolean
 name|b
 parameter_list|)
 block|{
+name|Message
+operator|.
+name|deprecated
+argument_list|(
+literal|"allownomd is deprecated, please use descriptor=\""
+operator|+
+operator|(
+name|b
+condition|?
+name|DESCRIPTOR_OPTIONAL
+else|:
+name|DESCRIPTOR_REQUIRED
+operator|)
+operator|+
+literal|"\" instead"
+argument_list|)
+expr_stmt|;
 name|allownomd
 operator|=
 name|b
 expr_stmt|;
+block|}
+comment|/**      * Sets the module descriptor presence rule.      * Should be one of {@link #DESCRIPTOR_REQUIRED} or {@link #DESCRIPTOR_OPTIONAL}.      *        * @param descriptorRule the descriptor rule to use with this resolver.      */
+specifier|public
+name|void
+name|setDescriptor
+parameter_list|(
+name|String
+name|descriptorRule
+parameter_list|)
+block|{
+if|if
+condition|(
+name|DESCRIPTOR_REQUIRED
+operator|.
+name|equals
+argument_list|(
+name|descriptorRule
+argument_list|)
+condition|)
+block|{
+name|allownomd
+operator|=
+literal|false
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|DESCRIPTOR_OPTIONAL
+operator|.
+name|equals
+argument_list|(
+name|descriptorRule
+argument_list|)
+condition|)
+block|{
+name|allownomd
+operator|=
+literal|true
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"unknown descriptor rule '"
+operator|+
+name|descriptorRule
+operator|+
+literal|"'. Allowed rules are: "
+operator|+
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+name|DESCRIPTOR_REQUIRED
+block|,
+name|DESCRIPTOR_OPTIONAL
+block|}
+argument_list|)
+argument_list|)
+throw|;
+block|}
 block|}
 specifier|public
 name|String
